# document-it

./: .clinerules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ISSUES.md  README.md  alembic.ini  database_tests_README.md  db_admin.py  db_admin_README.md  docker-compose.yml  main.py  pyproject.toml  run_database_tests.py  test_cli_document_insertion.py  test_context_extraction.py  test_database.py  test_database_workflow.py  test_langgraph.py  test_llm_parallel.py  test_observability.py  test_parallelization.py  test_simple_parallel.py  test_streamlit_document_insertion.py  test_streamlit_document_insertion_README.md  test_streamlit_document_processor.py  test_streamlit_document_processor_README.md  test_vector_search.py  verify_cli_document_insertion.py  verify_database_state.py
data/metadata/: document_index.json
docs/: analysis_engine.md  context_analyzer_design.md  context_extraction_tests.md  database_integration_plan.md  docker_compose_config.md  document_processor.md  file_parser.md  global_context_implementation_plan.md  html_parser_design.md  implementation_path.md  implementation_plan.md  improved_context_management.md  langsmith_connection.md  link_crawler_design.md  overview.md  parallelization_improvement_plan.md  project_setup.md  report_generator.md  streamlit_implementation.md  summary.md  web_connector.md
document_it/: __init__.py  streamlit_app.py
init-scripts/: 01-init.sql
migrations/: env.py
test_data/: product_page.html
tests/: test_analysis.py  test_context.py  test_parser.py  test_processor.py  test_reporting.py  test_web.py
(+75 files in other folders)
