[project]
name = "document-it"
version = "0.1.0"
description = "A tool to document LLMs by analyzing web documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "openai>=1.12.0",
    "langgraph>=0.0.25",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
document-it = "document_it.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py311"
